[package]
name = "typed_id2"
version = "0.1.3"
edition = "2021"
description = "typed ID for Rust"
license-file = "LICENSE"
keywords = ["type", "id"]
repository = "https://github.com/cjwcommuny/typed-id"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
